--- a/avaliacao/script/paginas/login/login.html
+++ b/avaliacao/script/paginas/login/login.html
@@ -10,7 +10,7 @@
         <div>
             <h1 id="teste"> Você está no login! </h1>
         </div>
-        <div id="alinhar">
+        <div class="alinhar">
             <a id="link" href="../../../estrutura/paginas/index.html"><button>Inicio</button> </a>    
         </div>
     </section>    
