--- a/avaliacao/estrutura/paginas/cadastro/cadastro.html
+++ b/avaliacao/estrutura/paginas/cadastro/cadastro.html
@@ -10,7 +10,7 @@
         <div>
             <h1 id="teste"> Você está no cadastro! </h1>
         </div>
-        <div id="alinhar">
+        <div class="alinhar">
             <a id="link" href="../index.html"><button>Inicio</button> </a>    
         </div>
     </section>
