--- a/avaliacao/estrutura/atividade_css/arquivo.html
+++ b/avaliacao/estrutura/atividade_css/arquivo.html
@@ -46,5 +46,33 @@
             <a id="link" href="../paginas/index.html"> <button> Index </button> </a>
         </div> 
     </section>
+    <section class="ladinho">
+        <div class="arrumar">
+            <img class="imagem" src="../../visual/imagens/gato_divo.jpg"> 
+        </div>
+        <div class="arrumar" >
+            <img class="imagem" src="../../visual/imagens/gato_minium.jpg"> 
+        </div>
+        <div class="arrumar">
+            <img id="gato" src="../../visual/imagens/el_gato.jpg"> 
+        </div>
+        <div class="arrumar">
+            <img class="imagem" src="../../visual/imagens/gato_sorrindo.jpg"> 
+        </div>
+    </section>
+    <section class="ladinho">
+        <div>
+            <img class="tamanho" src="../../visual/imagens/gato_divo.jpg"> 
+        </div>
+        <div>
+            <img class="tamanho" src="../../visual/imagens/gato_minium.jpg"> 
+        </div>
+        <div>
+            <img class="tamanho" src="../../visual/imagens/el_gato.jpg"> 
+        </div>
+        <div>
+            <img class="tamanho" src="../../visual/imagens/gato_sorrindo.jpg"> 
+        </div>
+    </section>
 </body>
 </html>
